--- a/index.html
+++ b/index.html
@@ -24,14 +24,32 @@
     />
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <main>
+      <div class="container">
+        <section>
+          <div class="image">
+            <img src="images/image-qr-code.png" alt="" />
+          </div>
+          <div class="text">
+            <div class="title">
+              <h1>Improve your front-end skills by building projects</h1>
+            </div>
+            <div class="subtitle">
+              <p>
+                Scan the QR code to visit Frontend Mentor and take your coding
+                skills to the next level
+              </p>
+            </div>
+          </div>
+        </section>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Pedro Lima</a>.
+        </div>
+      </div>
+    </main>
   </body>
 </html>
